--- a/styles/silver_bells/advanced_forum.silver_bells.images.css
+++ b/styles/silver_bells/advanced_forum.silver_bells.images.css
@@ -22,22 +22,15 @@
 }
 
 tr.even td.forum-list-icon-default .forum-list-icon-wrapper span, 
-tr.odd td.forum-list-icon-default .forum-list-icon-wrapper span {
+tr.odd td.forum-list-icon-default .forum-list-icon-wrapper span,
+.forum-list-icon-legend .forum-list-icon-default {
   background: transparent url(images/forum_list_default.png) no-repeat center center;
 }
 
 tr.even td.forum-list-icon-new-posts .forum-list-icon-wrapper span, 
-tr.odd td.forum-list-icon-new-posts .forum-list-icon-wrapper span {
-  background: transparent url(images/forum_list_new_posts.png) no-repeat center center;
-}
-
-/* FORUM LIST ICON LEGEND ***************************************************/
-.forum-list-icon-legend .forum-list-icon-default {
-  background: transparent url(images/forum_list_default.png) no-repeat top left;
-}
-
+tr.odd td.forum-list-icon-new-posts .forum-list-icon-wrapper span,
 .forum-list-icon-legend .forum-list-icon-new-posts {
-  background: transparent url(images/forum_list_new_posts.png) no-repeat top left;
+  background: transparent url(images/forum_list_new_posts.png) no-repeat center center;
 }
 
 /* TOPIC LIST ICONS *********************************************************/
